# agent-harness-workshop

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  postCreate.sh  start-app.sh
.devcontainer/oracle-init/: vector-memory.sh
app/: run.sh
scripts/: write_app_env.sh
